Prepare deployment for heroku

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/mydb
 spring.datasource.username=bestuser
 spring.datasource.password=bestuser
 
+spring.jpa.hibernate.ddl-auto=update
+
 server.port=3333
 server.servlet.context-path=/spring-boot-rest
